fix(server): add missing semantic HTML in base template

--- a/server/server/templates/base.html
+++ b/server/server/templates/base.html
@@ -32,7 +32,7 @@
 
 {% block header %}{% include "include/navbar.html" %}{% endblock %}
 
-{% block content %}{% endblock %}
+<main class="section">{% block content %}{% endblock %}</main>
 
 <script src="{% static 'js/navbar.js' %}"></script>
 
