fix(server): remove label from view to unbreak navbar layout

--- a/server/server/templates/include/navbar.html
+++ b/server/server/templates/include/navbar.html
@@ -22,7 +22,7 @@
         <form action="{% url 'search' %}" method="get">
           <div class="field has-addons">
             <div class="control">
-              <label class="is-invisible" for="query">Rechercher</label>
+              <label style="display: none" for="query">Rechercher</label>
               <input class="input" type="text" name="query" id="query" placeholder="Recherche">
             </div>
             <div class="control">
