--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -11,7 +11,7 @@
     {% endblock %}
     {% block title_suffix %}
       {% with self.get_site.site_name as site_name %}
-        {% if site_name %}- {{ site_name }}{% endif %}
+        {% if site_name %}- {{ site_name }}{% else %}- Tutorat Associatif Toulousain{% endif %}
       {% endwith %}
     {% endblock %}
   </title>
