wip: user login/signup management

--- a/server/static/sass/_variables.sass
+++ b/server/static/sass/_variables.sass
@@ -12,6 +12,6 @@ $scheme-main: #eee1e1
 $scheme-bis: darken($scheme-main, 3)
 $scheme-ter: darken($scheme-main, 8)
 
-$link: $accent
+$link: $secondary
 
 $custom-colors: ("accent": ($accent, findColorInvert($accent)), "secondary": ($secondary, findColorInvert($secondary)))
