--- a/server/static/sass/_overrides.sass
+++ b/server/static/sass/_overrides.sass
@@ -3,3 +3,8 @@
   max-width: 60em
   margin-left: auto
   margin-right: auto
+
+.form-wrapper
+  max-width: 10em
+  margin-left: auto
+  margin-right: auto
