--- a/server/templates/include/navbar.html
+++ b/server/templates/include/navbar.html
@@ -31,6 +31,16 @@
           </div>
         </form>
       </div>
+      {% if request.user.is_authenticated %}
+        <a href="{% url "user:logout" %}" class="button is-outlined">Déconnexion</a>
+      {% else %}
+        <div class="navbar-item"><a href="{% url "user:signup" %}" class="button is-inverted is-primary">Créer un
+          compte</a>
+        </div>
+        <div class="navbar-item"><a href="{% url "user:login" %}" class="button is-outlined is-light">Se
+          connecter</a>
+        </div>
+      {% endif %}
     </div>
   </div>
 </nav>
